Fixing font size on small

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -39,7 +39,7 @@
             animation: ticker 20s linear infinite;
         }
         @include viewport(sm) {
-            font-size: 18px;
+            font-size: 16px;
             letter-spacing: 6px;
             text-shadow: 2px 2px 2px rgba(66, 66, 66, 0.8);
             animation: ticker 15s linear infinite;
